# earthquake-alerts

./: .env.example  .gitignore  CLAUDE.md  README.md  deploy.sh  env-vars.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  test-alert.yml
api/: Dockerfile  main.py  requirements.txt
config/: config-production.yaml  config.example.yaml
scripts/: manual_post_earthquake.py  post_m32.py  send_test_alert.py
shared/: fallback-locale.json
src/: __init__.py  api_handler.py  main.py  orchestrator.py
src/core/: __init__.py  config.py  dedup.py  earthquake.py  formatter.py  geo.py  rate_limit.py  rules.py  static_map.py
src/shell/: __init__.py  config_loader.py  firestore_client.py  secret_manager_client.py  slack_client.py  static_map_client.py  twitter_client.py  usgs_client.py  whatsapp_client.py
tests/: __init__.py
tests/core/: __init__.py  test_dedup.py  test_earthquake.py  test_formatter.py  test_geo.py  test_rate_limit.py  test_rules.py  test_static_map.py
tests/shell/: test_config_loader.py  test_orchestrator.py  test_static_map_client.py  test_twitter_client.py  test_whatsapp_client.py
web/: .env.example  .env.production  .firebaserc  CLOUDFLARE_SETUP.md  Dockerfile  cloudbuild.yaml  deploy.sh  firebase.json  next.config.js  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
web/components/: CountdownTimer.tsx  EarthquakeCard.tsx  EarthquakeMap.tsx  Globe.tsx  GlobeWrapper.tsx  Header.tsx  MapWrapper.tsx
web/config/: locales.ts
web/lib/: api.ts
(+4 files in other folders)
