[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "earthquake-alerts"
version = "0.1.0"
description = "Serverless earthquake monitoring with configurable Slack alerts"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Earthquake Alerts Team"}
]
dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "google-cloud-firestore>=2.14.0",
    "functions-framework>=3.5.0",
    "typing-extensions>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "responses>=0.24.0",
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
strict = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
